--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,10 @@
-# Use the official Node.js image
+# Build stage
 FROM node:16 AS build
 
-# Set the working directory
+# Set working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json
+# Copy package files
 COPY package*.json ./
 
 # Install dependencies
@@ -13,16 +13,23 @@ RUN npm install
 # Copy the rest of the application
 COPY . .
 
+# Set environment variables
+ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL=${REACT_APP_API_URL}
+
 # Build the React app
 RUN npm run build
 
-# Use a lightweight server to serve the app
+# Production stage
 FROM nginx:alpine
 
-# Copy the build files to the Nginx server
+# Copy the build files
 COPY --from=build /app/build /usr/share/nginx/html
 
-# Expose the port
+# Copy nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Expose port
 EXPOSE 80
 
 # Start Nginx
