--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:prod": "env-cmd -f .env.production react-scripts start"
   },
   "eslintConfig": {
     "extends": [
